...
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_newSurvey">Nueva encuesta</string>
    <string name="surveyslist_language_text">Idioma</string>
    <string name="surveyslist_codEncuestador_text">Cod. de Encuestador</string>
...
    <string name="survey_text_M1_P1">1. ¿Podría decirme cuál es su NACIONALIDAD?</string>
    <string name="survey_text_M1_P2">2. ¿En que PAÍS ha estado residiendo la mayor parte de los últimos 12 meses?</string>
    <string name="survey_text_M1_P2_prov">Provincia</string>
    <string name="survey_text_M1_P2_loc">Localidad</string>
    <string name="survey_text_M1_P3">3. Para coger este vuelo, ¿de dónde parte para acceder al Aeropuerto?</string>
...
    <string name="survey_text_P3b">Aeropuerto de origen</string>
    <string name="survey_text_P4">4. ¿Que tipo de alojamiento ha utilizado durante su estancia en %1$s?</string>
    <string name="survey_radio_P4_option1">Hotel o similar</string>
    <string name="survey_radio_P4_option2">Apartamento/Vivienda alquilada</string>
    <string name="survey_radio_P4_option3">Segunda residencia</string>
...
    <string name="survey_radio_P7_option2">1 persona</string>
    <string name="survey_radio_P7_option3">2 personas</string>
    <string name="survey_radio_P7_option4">Nº personas</string>
    <string name="survey_text_P8">8. ¿A qué HORA ha llegado al aeropuerto?</string>
    <string name="survey_text_P8_hora">Hora</string>
...
    <string name="survey_text_P11">11. ¿Viaja al aeropuerto %1$s sólo para hacer transbordo o finaliza allí su viaje vía aérea?</string>
    <string name="survey_radio_P11_option1">Finaliza</string>
    <string name="survey_radio_P11_option2">Trasbordo</string>
    <string name="survey_text_P12">12. ¿Compañia aérea con la que continua el viaje?</string>
    <string name="survey_text_P13">13. ¿En que aeropuerto finalizará su viaje en avión?</string>
...
    <string name="survey_text_P15">15. ¿Es este su viaje de IDA o de VUELTA?</string>
    <string name="survey_radio_P15_option1">Ida</string>
    <string name="survey_radio_P15_option2">Vuelta</string>
    <string name="survey_text_P15a">15a . ¿Cuánto tiempo estará fuera?</string>
    <string name="survey_text_P15b">15b. ¿Cuánto tiempo ha estado fuera?</string>
...
    <string name="survey_text_P17">17. ¿Cuántos de ellos son menores de 15 años?</string>
    <string name="survey_text_P18">18. ¿Podría indicarme la relación que existe entre los componentes de su grupo inmediato de viaje?</string>
    <string name="survey_radio_P18_option2">Parientes (abuelos, tíos, primos, etc.)</string>
    <string name="survey_radio_P18_option3">Amigos/Grupos de estudio</string>
    <string name="survey_radio_P18_option4">Compañeros de trabajo</string>
...
    <string name="survey_text_P20">20. ¿Qué tipo de tarifa tiene el billete que va a utilizar?</string>
    <string name="survey_radio_P20_option1">Preferente/Bussines/First</string>
    <string name="survey_radio_P20_option2">Combinado (paquete)</string>
    <string name="survey_radio_P20_option3">Turista básica</string>
    <string name="survey_radio_P20_option5">Otras (free, etc.)</string>
...
    <string name="survey_text_P23">23. ¿Ha facturado equipaje?</string>
    <string name="survey_radio_P23_option1">Si</string>
    <string name="survey_radio_P23_option2">No</string>
    <string name="survey_radio_P23b_option1">1 bulto</string>
    <string name="survey_radio_P23b_option2">2 bultos</string>
...
    <string name="survey_radio_P26_option2">No</string>
    <string name="survey_text_P26B">26. Durante los últimos 12 meses ¿Ha utilizado OTRO MODO DE TRANSPORTE para llegar o salir de Granada?</string>
    <string name="survey_radio_P26B_option1">Sí</string>
    <string name="survey_radio_P26B_option2">No</string>
    <string name="survey_text_P26Ba">26a. ¿Cuántas veces?</string>
...

//MODEL QUE 3
    <string name="survey_radio_M3_P3_option1">Sí</string>
    <string name="survey_radio_M3_P3_option2">No</string>
    <string name="survey_text_M3_P7">7. Durante la conexión ¿Ha pasado la noche en %1$s o alrededores?</string>
    <string name="survey_text_M3_P8">8. ¿Dónde se ha alojado?</string>
    <string name="survey_radio_M3_P8_option1">Aeropuerto</string>
    <string name="survey_radio_M3_P8_option2">Hotel o similar</string>
    <string name="survey_radio_M3_P8_option3">Vivienda de familiares/amigos</string>
    <string name="survey_radio_M3_P8_option4">Otros</string>
...
    <string name="survey_radio_M3_P9_option1">Viene de su residencia</string>
    <string name="survey_radio_M3_P9_option2">Provincia</string>
    <string name="survey_radio_M3_P9_option2_localidad">Localidad</string>
    <string name="survey_radio_M3_P9_option3">Distrito</string>
    <string name="survey_text_M3_P9_otros">Escriba el nombre de la localidad</string>
...
    <string name="survey_radio_M3_P10_option7">Otros (Especificar)</string>
    <string name="survey_text_M3_P11">11. ¿Cuántos modos de transporte ha utilizado para acceder al aeropuerto?</string>
    <string name="survey_radio_M3_P11_option1">Un modo</string>
    <string name="survey_radio_M3_P11_option2">Dos modos</string>
    <string name="survey_radio_M3_P11_option3">Indique el nº de modos</string>
...
    <string name="survey_text_M3_P18">18. ¿Viaja al aeropuerto %1$s sólo para hacer transbordo o finaliza allí su viaje vía aérea?</string>
    <string name="survey_radio_M3_P18_option1">Finaliza</string>
    <string name="survey_radio_M3_P18_option2">Trasbordo</string>
    <string name="survey_text_M3_P18b">18b. ¿Compañia aérea con la que continua el viaje?</string>
    <string name="survey_text_M3_P19">19. ¿En que aeropuerto finalizará su viaje en avión?</string>
...
    <string name="survey_text_M3_P21">21. ¿Es este su viaje de IDA o de VUELTA?</string>
    <string name="survey_radio_M3_P21_option1">Ida</string>
    <string name="survey_radio_M3_P21_option2">Vuelta</string>
    <string name="survey_text_M3_P21a">21a . ¿Cuánto tiempo estará fuera?</string>
    <string name="survey_text_M3_P21b">21b. ¿Cuánto tiempo ha estado fuera?</string>
...
    <string name="survey_radio_M3_P22_option1">Viaja solo</string>
    <string name="survey_radio_M3_P22_option2">2 personas</string>
    <string name="survey_radio_M3_P22_option3">Nº personas</string>
    <string name="survey_text_M3_P23">23. ¿Cuántos de ellos son menores de 15 años?</string>
    <string name="survey_text_M3_P24">24. ¿Podría indicarme la relación que existe entre los componentes de su grupo inmediato de viaje?</string>
    <string name="survey_radio_M3_P24_option2">Parientes (abuelos, tíos, primos, etc.)</string>
    <string name="survey_radio_M3_P24_option3">Amigos/Grupos de estudio</string>
    <string name="survey_radio_M3_P24_option4">Compañeros de trabajo</string>
...
    <string name="survey_text_M3_P26">26. ¿Qué tipo de tarifa tiene el billete que va a utilizar?</string>
    <string name="survey_radio_M3_P26_option1">Preferente/Bussines/First</string>
    <string name="survey_radio_M3_P26_option2">Combinado (paquete)</string>
    <string name="survey_radio_M3_P26_option3">Turista básica</string>
    <string name="survey_radio_M3_P26_option5">Otras (free, etc.)</string>
...
