...
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M2_P1"
                style="@style/SuveyQuestionTitle"/>

            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                style="@style/SurveyQuestionEdit"
                android:completionThreshold="1"/>
...
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M2_P2"
                style="@style/SuveyQuestionTitle"/>

            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P2"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                style="@style/SurveyQuestionEdit"/>
        </LinearLayout>
...




    //P3
    <LinearLayout
        android:id="@+id/survey_layout_M3_P3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestion">

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M2_P3"
            style="@style/SuveyQuestionTitle"/>

        <RadioGroup
            android:id="@+id/survey_radiogroup_M3_P3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/survey_radio_M3_P3_option1"
                android:layout_width="match_parent"
...
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M2_P4"
                style="@style/SuveyQuestionTitle"/>
            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/SurveyQuestionEdit"/>
        </LinearLayout>
        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M2_P5"
                style="@style/SuveyQuestionTitle"/>
            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/SurveyQuestionEdit"/>
        </LinearLayout>
        <LinearLayout
...
    //End of P5



    //P6
    <LinearLayout
        android:id="@+id/survey_layout_M3_P6"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestion">

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M2_P6"
            style="@style/SuveyQuestionTitle"/>

        <RadioGroup
            android:id="@+id/survey_radiogroup_M3_P6"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/survey_radio_M3_P6_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_radio_M2_P6_option1"/>
            <RadioButton
                android:id="@+id/survey_radio_M3_P6_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_radio_M2_P6_option2"/>

        </RadioGroup>
    </LinearLayout>
...
    </LinearLayout>
    //End of P6b


    //P7
    <LinearLayout
        android:id="@+id/survey_layout_M3_P7"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestion">

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M3_P7"
            style="@style/SuveyQuestionTitle"/>

        <RadioGroup
            android:id="@+id/survey_radiogroup_M3_P7"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/survey_radio_M3_P7_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_radio_M3_P3_option1"/>
            <RadioButton
                android:id="@+id/survey_radio_M3_P7_option2"
                android:layout_width="match_parent"
...
    //End of P7



    //P8
    <RelativeLayout
        android:id="@+id/survey_layout_M3_P8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestion">

        <TextView
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M3_P8"
            style="@style/SuveyQuestionTitle"/>

        <RadioGroup
            android:id="@+id/survey_radiogroup_M3_P8"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/survey_text_M3_P8">

            <RadioButton
...
