...
    <!--android:visibility="gone"
    style="@style/SurveyQuestionsBox">-->


    //P20
    <LinearLayout
        android:id="@+id/survey_layout_M3_P20"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestion">

...
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M3_P20"
            style="@style/SuveyQuestionTitle"/>
        <Spinner
            android:id="@+id/survey_spinner_M3_P20"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionEdit"/>
    </LinearLayout>
    //End of P20
...
            style="@style/SuveyQuestionTitle"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/survey_radiogroup_M3_P21"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <RadioButton
...
                    style="@style/SuveyQuestionTitle"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/survey_layout_M3_P21nums"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_radio_M3_P21b_option2"
                    style="@style/SurveySubQuestion"/>
                <EditText
                    android:id="@+id/survey_edit_M3_P21b"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/SurveyQuestionEdit"
                    android:inputType="number"
                    android:gravity="center"/>
...
            style="@style/SuveyQuestionTitle"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/survey_radiogroup_M3_P22"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/survey_radio_M3_P22_option1"
...
                    android:layout_height="wrap_content"
                    android:text="@string/survey_radio_M3_P22_option3"/>


            </RadioGroup>
            <EditText
                android:id="@+id/survey_edit_M3_P22_numPersonas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/SurveyQuestionEdit"
                android:inputType="number"
                android:layout_gravity="bottom"/>
...




    //P23
    <LinearLayout
        android:id="@+id/survey_layout_M3_P23"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestion">

...
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M3_P23"
            style="@style/SuveyQuestionTitle"/>
        <EditText
            android:id="@+id/survey_edit_M3_P23"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionEdit"
            android:inputType="number"/>
        <TextView
...




    //P24
    <LinearLayout
        android:id="@+id/survey_layout_M3_P24"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestion">
        <TextView
            android:id="@+id/survey_text_M3_P24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M3_P24"
            style="@style/SuveyQuestionTitle"/>
        <RadioGroup
            android:id="@+id/survey_radiogroup_M3_P24"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/survey_radio_M3_P24_option1"
                android:layout_width="wrap_content"
...
