...
    <!--android:visibility="gone"
    style="@style/SurveyQuestionsBox">-->


    //P15
    <LinearLayout
        android:id="@+id/survey_layout_M3_P15"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestion">

...
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M3_P15"
            style="@style/SuveyQuestionTitle"/>
        <EditText
            android:id="@+id/survey_edit_M3_P15_hora"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="XX"
            style="@style/SurveyQuestionEdit"
            android:inputType="number"
...
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_P8_hora"
            style="@style/SurveySubQuestion"
            android:layout_marginLeft="@dimen/medium_padding"/>
        <EditText
            android:id="@+id/survey_edit_M3_P15_minutos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="XX"
            style="@style/SurveyQuestionEdit"
            android:inputType="number"
...
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M3_P16"
                style="@style/SuveyQuestionTitle"/>
            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P16"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/SurveyQuestionEdit"/>
        </LinearLayout>
        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M3_P17"
                style="@style/SuveyQuestionTitle"/>
            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P17_company"
                android:layout_width="0dp"
                android:layout_weight="2.51"
                android:layout_height="wrap_content"
                style="@style/SurveyQuestionEdit"
                android:hint="@string/survey_hint_P10"/>
            <TextView
...
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="AAA-"
                android:gravity="right"
                style="@style/SuveyQuestionTitle"/>
            <EditText
                android:id="@+id/survey_edit_M3_P17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SurveyQuestionEdit"
                android:hint="XXXX"
                android:inputType="number"
                android:maxLength="4"/>
...




    //P18
    <LinearLayout
        android:id="@+id/survey_layout_M3_P18"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/SurveySingleQuestionA">
        <TextView
            android:id="@+id/survey_text_M3_P18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_M3_P18"
            style="@style/SuveyQuestionTitle"/>
        <RadioGroup
            android:id="@+id/survey_radiogroup_M3_P18"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/survey_radio_M3_P18_option1"
...
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M3_P18b"
                style="@style/SuveyQuestionTitle"/>
            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P18b"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/SurveyQuestionEdit"/>
        </LinearLayout>
        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/survey_text_M3_P19"
                style="@style/SuveyQuestionTitle"/>
            <AutoCompleteTextView
                android:id="@+id/survey_autoComplete_M3_P19"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/SurveyQuestionEdit" />
        </LinearLayout>
        <LinearLayout
...
